@@ -36,7 +36,7 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	ADD_DEPENDENCIES(upload tag)
 	ADD_DEPENDENCIES(changelog_update tag)
 	ADD_DEPENDENCIES(commit_after_release changelog_update)
-	ADD_DEPENDENCIES(push_svc_tags commit_after_release)
+	ADD_DEPENDENCIES(push_post_build commit_after_release)
     ENDMACRO(MANAGE_SOURCE_VERSION_CONTROL_COMMON)
 
     MACRO(MANAGE_SOURCE_VERSION_CONTROL_GIT)
@@ -48,7 +48,7 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    VERBATIM
 	    )
 
-	ADD_CUSTOM_TARGET(push_svc_tags
+	ADD_CUSTOM_TARGET(push_post_build
 	    COMMAND git push
 	    COMMAND git push --tags
 	    COMMENT "Git push tags"
@@ -65,6 +65,7 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    VERBATIM
 	    )
 
+	MANAGE_SOURCE_VERSION_CONTROL_COMMON()
     ENDMACRO(MANAGE_SOURCE_VERSION_CONTROL_GIT)
 
     MACRO(MANAGE_SOURCE_VERSION_CONTROL_HG)
@@ -74,7 +75,7 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    VERBATIM
 	    )
 
-	ADD_CUSTOM_TARGET(push_svc_tags
+	ADD_CUSTOM_TARGET(push_post_build
 	    COMMAND hg push
 	    COMMENT "Mercurial push tags"
 	    VERBATIM
@@ -86,7 +87,7 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    VERBATIM
 	    )
 
-	ADD_DEPENDENCIES(tag version_check)
+	MANAGE_SOURCE_VERSION_CONTROL_COMMON()
     ENDMACRO(MANAGE_SOURCE_VERSION_CONTROL_HG)
 
     MACRO(MANAGE_SOURCE_VERSION_CONTROL_SVN)
@@ -96,7 +97,7 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    VERBATIM
 	    )
 
-	ADD_CUSTOM_TARGET(push_svc_tags
+	ADD_CUSTOM_TARGET(push_post_build
 	    COMMENT "SVN push is done at commit"
 	    VERBATIM
 	    )
@@ -106,6 +107,8 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    COMMENT "Tagging the source as ver ${PRJ_VER}"
 	    VERBATIM
 	    )
+
+	MANAGE_SOURCE_VERSION_CONTROL_COMMON()
     ENDMACRO(MANAGE_SOURCE_VERSION_CONTROL_SVN)
 
     MACRO(MANAGE_SOURCE_VERSION_CONTROL_CVS)
@@ -115,7 +118,7 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    VERBATIM
 	    )
 
-	ADD_CUSTOM_TARGET(push_svc_tags
+	ADD_CUSTOM_TARGET(push_post_build
 	    COMMENT "SVN push is done at commit"
 	    VERBATIM
 	    )
@@ -125,6 +128,8 @@ IF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
 	    COMMENT "Tagging the source as ver ${PRJ_VER}"
 	    VERBATIM
 	    )
+
+	MANAGE_SOURCE_VERSION_CONTROL_COMMON()
     ENDMACRO(MANAGE_SOURCE_VERSION_CONTROL_CVS)
 
 ENDIF(NOT DEFINED _MANAGE_SOURCE_VERSION_CONTROL_CMAKE_)
