@@ -1,4 +1,4 @@
-PRJ_VER=0.4.10
+PRJ_VER=0.4.11
 SUMMARY=Fixed 670079,671063; Fixed UseUninstall;More informative error message.
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=670079,671063
@@ -14,4 +14,5 @@ REDHAT_BUGZILLA=670079,671063
 - fedpkg and koji build for every branches are revealed.
 - Now set rawhide as f16, release dists are f15,f14,f13.
 - rpm build process is now refined, no unnecessary build.
+- Rename target push_svc_tag to push_post_build.
 
